# MyServer

./: .env  Cargo.toml  README.md
src/: README.md  api.rs  db.rs  main.rs  public_api.rs  server_error.rs
