[package]
name = "project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
actix-web = "4.0.0-beta.5"
dotenv = "0.11"
serde = "1.0"
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
url = "2.2.2"
